# glance

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
example/: CMakeLists.txt  texture_example.cpp
include/: glance.hpp  shader.hpp
shader/: shader.fs  shader.vs
src/: main.cpp  shader.cpp
test/: CMakeLists.txt  shader_test.cpp
